Got the bibliography almost completely working, just fixing up some ampersands

--- a/essays/contemporary/refs.bib
+++ b/essays/contemporary/refs.bib
@@ -1,6 +1,7 @@
+
 @ARTICLE{7878940,
   author={Williams, R. Stanley},
-  journal={Computing in Science & Engineering}, 
+  journal={Computing in Science Engineering}, 
   title={What's Next? [The end of Moore's law]}, 
   year={2017},
   volume={19},
@@ -32,7 +33,7 @@
   pages={32-37},
   doi={10.1109/MSPEC.2022.9976473}}@ARTICLE{7878935,
   author={Theis, Thomas N. and Wong, H.-S. Philip},
-  journal={Computing in Science & Engineering}, 
+  journal={Computing in Science Engineering}, 
   title={The End of Moore's Law: A New Beginning for Information Technology}, 
   year={2017},
   volume={19},
