--- a/essays/contemporary/contemporary_essay.tex
+++ b/essays/contemporary/contemporary_essay.tex
@@ -3,6 +3,7 @@
 %
 %Margin - 1 inch on all sides
 %
+\usepackage{hyperref}
 \usepackage[letterpaper]{geometry}
 \usepackage{times}
 \geometry{top=1.0in, bottom=1.0in, left=1.0in, right=1.0in}
@@ -32,6 +33,7 @@
 \rfoot{} 
 \renewcommand{\headrulewidth}{0pt} 
 \renewcommand{\footrulewidth}{0pt} 
+\setlength{\headheight}{14.5pt}
 %To make sure we actually have header 0.5in away from top edge
 %12pt is one-sixth of an inch. Subtract this from 0.5in to get headsep value
 \setlength\headsep{0.333in}
@@ -41,8 +43,8 @@
 %(to start, use \begin{workscited...}, each entry preceded by \bibent)
 % - from Ryan Alcock's MLA style file
 %
-\newcommand{\bibent}{\noindent \hangindent 40pt}
-\newenvironment{workscited}{\newpage \begin{center} Works Cited \end{center}}{\newpage }
+% \newcommand{\bibent}{\noindent \hangindent 40pt}
+% \newenvironment{workscited}{\newpage \begin{center} Works Cited \end{center}}{\newpage }
 
 %
 %Bibtex and Bibliography
@@ -71,6 +73,8 @@ ECE 3000\\
 Paper Title
 \end{center}
 
+Look there is some text here. \parencite{7842840}
+
 
 %%%%Changes paragraph indentation to 0.5in
 \setlength{\parindent}{0.5in}
@@ -97,22 +101,23 @@ Notes
 3. Please note that any direct quotes from the nineteenth century texts are writtenin their original form, which may contain grammar mistakes according to twenty-first century grammar rules.
 
 %%%%Works cited
-\begin{workscited}
+% \begin{workscited}
 
-\bibent
-Allen, R.L. \textit{The American Farm Book; or Compend of Ameri can Agriculture; Being a Practical Treatise on Soils, Manures, Draining, Irrigation, Grasses, Grain, Roots, Fruits, Cotton, Tobacco, Sugar Cane, Rice, and Every Staple Product of the United States with the Best Methods of Planting, Cultivating, and Prep aration for Market.} New York: Saxton, 1849. Print.
+% \bibent
+% Allen, R.L. \textit{The American Farm Book; or Compend of Ameri can Agriculture; Being a Practical Treatise on Soils, Manures, Draining, Irrigation, Grasses, Grain, Roots, Fruits, Cotton, Tobacco, Sugar Cane, Rice, and Every Staple Product of the United States with the Best Methods of Planting, Cultivating, and Prep aration for Market.} New York: Saxton, 1849. Print.
 
-\bibent
-Baker, Gladys L., Wayne D. Rasmussen, Vivian Wiser, and Jane M. Porter. \textit{Century of Service: The First 100 Years of the United States Department of Agriculture.}[Federal Government], 1996. Print.
+% \bibent
+% Baker, Gladys L., Wayne D. Rasmussen, Vivian Wiser, and Jane M. Porter. \textit{Century of Service: The First 100 Years of the United States Department of Agriculture.}[Federal Government], 1996. Print.
 
-\bibent
-Danhof, Clarence H. \textit{Change in Agriculture: The Northern United States, 1820-1870.} Cambridge: Harvard UP, 1969. Print.
+% \bibent
+% Danhof, Clarence H. \textit{Change in Agriculture: The Northern United States, 1820-1870.} Cambridge: Harvard UP, 1969. Print.
 
 
-\end{workscited}
+% \end{workscited}
 
+\newpage
+\nocite{7878935}
 \printbibliography
 
 \end{flushleft}
 \end{document}
-% \}
