Got the first paragraph done in the contemporary essay

--- a/essays/contemporary/refs.bib
+++ b/essays/contemporary/refs.bib
@@ -1,13 +1,14 @@
 
 @ARTICLE{7878940,
   author={Williams, R. Stanley},
-  journal={Computing in Science Engineering}, 
+  journal={Computing in Science \& Engineering}, 
   title={What's Next? [The end of Moore's law]}, 
   year={2017},
   volume={19},
   number={2},
   pages={7-13},
-  doi={10.1109/MCSE.2017.31}}@ARTICLE{7842840,
+  doi={10.1109/MCSE.2017.31}}
+@ARTICLE{7842840,
   author={DeBenedictis, Erik P.},
   journal={Computer}, 
   title={It's Time to Redefine Moore's Law Again}, 
@@ -15,15 +16,8 @@
   volume={50},
   number={2},
   pages={72-75},
-  doi={10.1109/MC.2017.34}}@ARTICLE{7999139,
-  author={DeBenedictis, Erik P. and Badaroglu, Mustafa and Chen, An and Conte, Thomas M. and Gargini, Paolo},
-  journal={Computer}, 
-  title={Sustaining Moore's law with 3D chips}, 
-  year={2017},
-  volume={50},
-  number={8},
-  pages={69-73},
-  doi={10.1109/MC.2017.3001236}}@ARTICLE{9976473,
+  doi={10.1109/MC.2017.34}}
+@ARTICLE{9976473,
   author={Radosavljevic, Marko and Kavalieros, Jack},
   journal={IEEE Spectrum}, 
   title={Taking Moore's Law to New Heights: When transistors can't get any smaller, the only direction is up}, 
@@ -31,15 +25,17 @@
   volume={59},
   number={12},
   pages={32-37},
-  doi={10.1109/MSPEC.2022.9976473}}@ARTICLE{7878935,
+  doi={10.1109/MSPEC.2022.9976473}}
+@ARTICLE{7878935,
   author={Theis, Thomas N. and Wong, H.-S. Philip},
-  journal={Computing in Science Engineering}, 
+  journal={Computing in Science \& Engineering}, 
   title={The End of Moore's Law: A New Beginning for Information Technology}, 
   year={2017},
   volume={19},
   number={2},
   pages={41-50},
-  doi={10.1109/MCSE.2017.29}}@ARTICLE{9792148,
+  doi={10.1109/MCSE.2017.29}}
+@ARTICLE{9792148,
   author={Moore, Samuel K.},
   journal={IEEE Spectrum}, 
   title={3 Paths to 3D Processors}, 
@@ -48,3 +44,22 @@
   number={6},
   pages={24-29},
   doi={10.1109/MSPEC.2022.9792148}}
+@ARTICLE{1677462,
+  author={Mollick, E.},
+  journal={IEEE Annals of the History of Computing}, 
+  title={Establishing Moore's Law}, 
+  year={2006},
+  volume={28},
+  number={3},
+  pages={62-75},
+  doi={10.1109/MAHC.2006.45}}
+@ARTICLE{4785860,
+  author={Moore, Gordon E.},
+  journal={IEEE Solid-State Circuits Society Newsletter}, 
+  title={Cramming more components onto integrated circuits, Reprinted from Electronics, volume 38, number 8, April 19, 1965, pp.114 ff.}, 
+  year={2006},
+  volume={11},
+  number={3},
+  pages={33-35},
+  doi={10.1109/N-SSC.2006.4785860}}
+
