--- a/essays/contemporary/contemporary_essay.tex
+++ b/essays/contemporary/contemporary_essay.tex
@@ -70,53 +70,47 @@ ECE 3000\\
 
 %%%%Title
 \begin{center}
-Paper Title
+Is Moore's Law Really Dead
 \end{center}
 
-Look there is some text here. \parencite{7842840}
 
 
 %%%%Changes paragraph indentation to 0.5in
 \setlength{\parindent}{0.5in}
 %%%%Begin body of paper here
 
+The principle behind Moore's law was first introduced
+in 1965, and since then it has driven innovation in the
+electrical engineering industry. This principle asserts
+that the performance of leading computer processors
+doubles roughly every one and a half years and it was 
+proposed originally by Gordon E. Moore. In his 1965 paper
+he talked about the decreasing space between, size of, and
+cost of transistors found on integrated circuits. He
+stated, "With unit cost falling as the number of components
+per circuit rises, by 1975 economics may dictate squeezing
+as many as 65,000 components on a single silicon chip"
+\parencite{4785860}. A number in the range of 65,000
+may have been a bold claim in 1965, but the recent
+flagship processor from Intel -- the core i9 13900k
+-- boasts up to 26 billion transistors on a single
+chip. This dramatic increase, albeit spanning several
+decades, shows that the original claims from Moore have
+been able to hold true since its inception. Despite the
+constant growth that has been prevalent over many years,
+Moore's law has seemed to slow down more and more in 
+the recent years. As components get smaller and smaller,
+we encounter physical boundaries and roadblocks which 
+present many difficulties in the manufacturing processes
+of newer and faster chips.
+
+
 
 \newpage
 
 
-%%%%Title
-\begin{center}
-Notes
-\end{center}
-
-
-\setlength{\parindent}{0.5in}
-
-1. Danhof includes “Delaware, Maryland, all states north of the Potomac and Ohio rivers, Missouri, and states to its north” when referring to the northern states (11).
-
-
-2. For the purposes of this paper,“science” is defined as it was in nineteenthcentury agriculture: conducting experiments and engaging in research.
-
-
-3. Please note that any direct quotes from the nineteenth century texts are writtenin their original form, which may contain grammar mistakes according to twenty-first century grammar rules.
-
-%%%%Works cited
-% \begin{workscited}
-
-% \bibent
-% Allen, R.L. \textit{The American Farm Book; or Compend of Ameri can Agriculture; Being a Practical Treatise on Soils, Manures, Draining, Irrigation, Grasses, Grain, Roots, Fruits, Cotton, Tobacco, Sugar Cane, Rice, and Every Staple Product of the United States with the Best Methods of Planting, Cultivating, and Prep aration for Market.} New York: Saxton, 1849. Print.
-
-% \bibent
-% Baker, Gladys L., Wayne D. Rasmussen, Vivian Wiser, and Jane M. Porter. \textit{Century of Service: The First 100 Years of the United States Department of Agriculture.}[Federal Government], 1996. Print.
-
-% \bibent
-% Danhof, Clarence H. \textit{Change in Agriculture: The Northern United States, 1820-1870.} Cambridge: Harvard UP, 1969. Print.
-
-
-% \end{workscited}
-
 \newpage
-\nocite{7878935}
+\nocite{*}
 \printbibliography
 
 \end{flushleft}
