Finished the 2nd paragraph of the contemporary essay

--- a/essays/contemporary/contemporary_essay.tex
+++ b/essays/contemporary/contemporary_essay.tex
@@ -104,6 +104,34 @@ we encounter physical boundaries and roadblocks which
 present many difficulties in the manufacturing processes
 of newer and faster chips.
 
+With chips being manufactured in the nanometer scale,
+we encounter some new problems that have never been
+encountered before. Findings from an article showed
+that "Further reduction in insulator thickness would
+have resulted in unacceptable (and exponential) increases
+in gate leakage current through direct quantum tunneling"
+\parencite{7878935}. Direct quantum tunneling of electrons
+through oxide thickness is a phenomenon that shows
+that even if advances are made in finding processes
+to allow the manufacturing of smaller and smaller components,
+other physical limitations will likely arise which
+can prevent the functionality of ever-smaller components.
+Another physical challenge that is presented with
+minute components is the difficulty to discern between
+activated and deactivated currents. From the same
+article we learn that, "Further reduction in operating
+voltage swing would have resulted in either unacceptably
+low channel current in the “on” state (unacceptable
+decreases in switching speed) or increased leakage
+current in the “off” state (unacceptable increases
+in passive power)" \parencite{7878935}. With these
+presented difficulties, in order for a future continuation
+of Moore's law, the future advances in manufacturing
+technology will have to present unique solutions. Until
+this point, the increases in computing power have come
+from placing more, smaller transistors on the same size
+chip. Due to these difficulties, solutions will have to
+come from unique innovations.
 
 
 \newpage
