Actually the essay isn't done because the spacing wasn't supposed to be double (sad day)

--- a/essays/contemporary/contemporary_essay.tex
+++ b/essays/contemporary/contemporary_essay.tex
@@ -12,7 +12,7 @@
 %Doublespacing
 %
 \usepackage{setspace}
-\doublespacing
+\onehalfspacing
 
 %
 %Rotating tables (e.g. sideways when too long)
@@ -40,7 +40,7 @@
 
 %
 %Bibtex and Bibliography
-
+%
 \usepackage[american]{babel}
 \usepackage{csquotes}
 \usepackage[style=mla,backend=biber]{biblatex}
@@ -62,7 +62,7 @@ ECE 3000\\
 
 %%%%Title
 \begin{center}
-Is Moore's Law Really Dead
+Is Moore's Law Really Dead?
 \end{center}
 
 
@@ -151,12 +151,22 @@ integrated circuit design have found ways to stack
 CMOS components directly atop one another. Researchers
 were able to find a configuration of CMOS components
 that allowed the design of an inverter that had a footprint
-half the size of a typical inverter when designed by
+half the size of a typical inverter designed by
 placing components side-by-side. "Combined with appropriate
 interconnects, the 3D-stacked CMOS approach effectively
 cuts the inverter footprint in half, doubling the
 area density and further pushing the limits of Moore's
-Law" \parencite{9976473}.
+Law" \parencite{9976473}. Their research in the area has
+led to several advances in the development of 3D silicon
+chips, certainly beyond vertical inverter configurations.
+They've successfully made entire integrated circuits
+featuring 3D circuit constructions, stating, "We've made
+wafers where the smallest distance between two sets
+of stacked devices is only 55 nm. While the device
+performance results we achieved are not records in
+and of themselves, they do compare well with individual
+nonstacked control devices built on the same wafer
+with the same processing" \parencite{9976473}.
 
 New innovations and solutions in the realm of processor
 design are being presented constantly, and if we're
