Finished the contemporary essay and powerpoint

--- a/essays/contemporary/contemporary_essay.tex
+++ b/essays/contemporary/contemporary_essay.tex
@@ -71,7 +71,7 @@ Is Moore's Law Really Dead?
 \setlength{\parindent}{0.5in}
 %%%%Begin body of paper here
 
-The principle behind Moore's law was first introduced
+The principle behind Moore's Law was first introduced
 in 1965, and since then it has driven innovation in
 the electrical engineering industry. This principle
 asserts that the performance of leading computer processors
@@ -90,7 +90,7 @@ on a single chip. This dramatic increase, albeit spanning
 several decades, shows that the original claims from
 Moore have been able to hold true since its inception.
 Despite the constant growth that has been prevalent
-over many years, Moore's law has seemed to slow down
+over many years, Moore's Law has seemed to slow down
 more and more in the recent years. As components get
 smaller and smaller, we encounter physical boundaries
 and roadblocks which present many difficulties in
@@ -118,7 +118,7 @@ decreases in switching speed) or increased leakage
 current in the “off” state (unacceptable increases
 in passive power)" \parencite{7878935}. With these
 presented difficulties, in order for a future continuation
-of Moore's law, the future advances in manufacturing
+of Moore's Law, the future advances in manufacturing
 technology will have to present unique solutions.
 Until this point, the increases in computing power
 have come from placing more, smaller transistors on
@@ -151,39 +151,51 @@ integrated circuit design have found ways to stack
 CMOS components directly atop one another. Researchers
 were able to find a configuration of CMOS components
 that allowed the design of an inverter that had a footprint
-half the size of a typical inverter designed by
-placing components side-by-side. "Combined with appropriate
+half the size of a typical inverter designed by placing
+components side-by-side. "Combined with appropriate
 interconnects, the 3D-stacked CMOS approach effectively
-cuts the inverter footprint in half, doubling the
-area density and further pushing the limits of Moore's
-Law" \parencite{9976473}. Their research in the area has
+cuts the inverter footprint in half, doubling the area
+density and further pushing the limits of Moore's Law"
+\parencite{9976473}. Their research in the area has
 led to several advances in the development of 3D silicon
 chips, certainly beyond vertical inverter configurations.
 They've successfully made entire integrated circuits
-featuring 3D circuit constructions, stating, "We've made
-wafers where the smallest distance between two sets
-of stacked devices is only 55 nm. While the device
+featuring 3D circuit constructions, stating, "We've
+made wafers where the smallest distance between two
+sets of stacked devices is only 55 nm. While the device
 performance results we achieved are not records in
 and of themselves, they do compare well with individual
 nonstacked control devices built on the same wafer
 with the same processing" \parencite{9976473}.
 
 New innovations and solutions in the realm of processor
-design are being presented constantly, and if we're
-to expect a continuation in Moore's law and computation
+design are being presented constantly. If we're to
+expect a continuation in Moore's Law and computation
 performance increases in the future, the solutions
 that are presented will need to take a different shape
 from the solutions that have been presented through
-the first 40 years of the existence of Moore's law
-as a concept. Further innovations in the realm of newer
-magnetic memory, computation techniques, and overall
-rethinking of modern computation technologies are being
-considered and studied each day. With the increase
-of technologies and devices that require more demanding
-computation power, the development of more efficient
-and computationally effect devices will surmise, but
-whether it will keep up with the development claims
-of Moore's law will only be told by the future.
+the first 40 years of Moore's Law's existence. Further
+innovations in the realm of newer magnetic memory,
+computation techniques, and overall rethinking of modern
+computation technologies are being considered and studied
+each day. Consider the hardware we find in our smartphones,
+featuring devices designed for very specific tasks
+such as video processing and internet requests. The
+future of computation may be filled with such components,
+each specializing in their own processes and working
+together to push the limits of computing power. Recent
+breakthroughs in the area of analog computing may play
+a big role in the continuation of Moore's Law as well.
+
+With the increase of technologies and devices that
+require more demanding computation power, the development
+of more efficient and computationally effective devices
+will surmise. Expanding technology in the realm of
+Artificial Intelligence and the Internet of Things
+will put pressure on the future to innovate and engineer
+newer technologies. Whether or not our innovation will
+keep up with the development claims of Moore's Law
+can only be told by the future.
 
 
 
